Fix all bibtex issues

--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,10 @@
 @inproceedings{scannell2007crubadan,
- title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
- author={Scannell, Kevin P},
- year={2007}
+  title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
+  author={Scannell, Kevin P},
+  booktitle={Building and Exploring Web Corpora: Proceedings of the 3rd Web as Corpus Workshop},
+  volume={4},
+  pages={5--15},
+  year={2007}
 }
 
 @article{benet2014ipfs,
@@ -12,7 +15,7 @@
 }
 
 @article{bodo2017language,
-  title={Language revitalization, modernity, and the Cs{\'a}ng{\'o} mode of speaking},
+  title={Language revitalization, modernity, and the {Cs{\'a}ng{\'o}} mode of speaking},
   author={Bod{\'o}, Csan{\'a}d and Fazakas, No{\'e}mi and Heltai, J{\'a}nos Imre},
   journal={Open Linguistics},
   volume={3},
@@ -62,7 +65,7 @@
 }
 
 @article{grenoble2016response,
-  title={A response to ‘Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)’, by Nala Huiying Lee \& John Van Way},
+  title={A response to '{Assessing} levels of endangerment in the {Catalogue of Endangered Languages (ELCat)} using the {Language Endangerment Index (LEI)}', by {Nala Huiying Lee \& John Van Way}},
   author={Grenoble, Lenore A},
   journal={Language in Society},
   volume={45},
@@ -94,12 +97,12 @@
 @article{dwyer2012tools,
   title={Tools and techniques for endangered-language assessment and revitalization},
   author={Dwyer, Arienne M},
-  journal={Minor. Lang. Today’s Glob. Soc},
+  journal={Minor. Lang. Today's Glob. Soc},
   year={2012}
 }
 
 @misc{unesco2014unesco,
-  title={UNESCO Atlas of the World’s Languages in Danger},
+  title={{UNESCO} Atlas of the World's Languages in Danger},
   author={UNESCO, Atlas},
   year={2014},
   publisher={See http://www. unesco. org/culture/languages-atlas/(accessed 19 October 2014)}
@@ -114,7 +117,7 @@
 }
 
 @article{bourhis2001reversing,
-  title={Reversing language shift in Quebec},
+  title={Reversing language shift in {Quebec}},
   author={Bourhis, Richard Y},
   journal={MULTILINGUAL MATTERS},
   pages={101--141},
@@ -123,7 +126,7 @@
 }
 
 @article{lewis2010assessing,
-  title={Assessing endangerment: expanding Fishman’s GIDS},
+  title={Assessing endangerment: expanding {Fishman's GIDS}},
   author={Lewis, M Paul and Simons, Gary F},
   journal={Revue roumaine de linguistique},
   volume={55},
@@ -161,7 +164,7 @@
 }
 
 @inproceedings{lewis2010haitian,
- title={Haitian Creole: How to Build and Ship an MT Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
+ title={{Haitian Creole}: How to Build and Ship an {MT} Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
  author={Lewis, Will},
  booktitle={14th Annual conference of the European Association for machine translation},
  year={2010},
@@ -188,7 +191,7 @@
 }
 
 @inproceedings{lewis2011crisis,
- title={Crisis mt: Developing a cookbook for mt in crisis situations},
+ title={Crisis {MT}: Developing a cookbook for {MT} in crisis situations},
  author={Lewis, William D and Munro, Robert and Vogel, Stephan},
  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
  pages={501--511},
@@ -198,7 +201,7 @@
 
 
 @inproceedings{agic2015if,
- title={If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages},
+ title={If all you have is a bit of the {Bible}: Learning {POS} taggers for truly low-resource languages},
  author={Agi{\'c}, {\v{Z}}eljko and Hovy, Dirk and S{\o}gaard, Anders},
  booktitle={The 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference of the Asian Federation of Natural Language Processing (ACL-IJCNLP 2015)},
  year={2015}
@@ -234,7 +237,7 @@
 
 
 @inproceedings{chew2006evaluation,
- title={Evaluation of the bible as a resource for cross-language information retrieval},
+ title={Evaluation of the {Bible} as a resource for cross-language information retrieval},
  author={Chew, Peter A and Verzi, Steve J and Bauer, Travis L and McClain, Jonathan T},
  booktitle={Proceedings of the workshop on multilingual language resources and interoperability},
  pages={68--74},
@@ -243,7 +246,7 @@
 }
 
 @article{hanks2017policy,
- title={Policy Barriers to Ainu Language Revitalization in Japan: When Globalization Means English},
+ title={Policy Barriers to {Ainu} Language Revitalization in {Japan}: When Globalization Means {English}},
  author={Hanks, David H},
  journal={Working Papers in Educational Linguistics (WPEL)},
  volume={32},
@@ -253,7 +256,7 @@
 }
 
 @book{okrent2009land,
- title={In the land of invented languages: Esperanto rock stars, Klingon poets, Loglan lovers, and the mad dreamers who tried to build a perfect language},
+ title={In the land of invented languages: Esperanto rock stars, {Klingon} poets, {Loglan} lovers, and the mad dreamers who tried to build a perfect language},
  author={Okrent, Arika},
  year={2009},
  publisher={Spiegel \& Grau}
@@ -272,7 +275,7 @@
 }
 
 @article{schreyer2015digital,
- title={The digital fandom of Na'vi speakers.},
+ title={The digital fandom of {Na'vi} speakers.},
  author={Schreyer, Christine},
  journal={Transformative Works \& Cultures},
  volume={18},
@@ -319,7 +322,7 @@
 }
 
 @article{warner2007ethics,
- title={Ethics and revitalization of dormant languages: The Mutsun language},
+ title={Ethics and revitalization of dormant languages: The {Mutsun} language},
  author={Warner, Natasha and Luna, Quirina and Butler, Lynnika},
  journal={Language Documentation \& Conservation},
  volume={1},
@@ -330,7 +333,7 @@
 }
 
 @article{clague2009manx,
- title={Manx language revitalization and immersion education},
+ title={{Manx} language revitalization and immersion education},
  author={Clague, Marie and others},
  journal={E-Keltoi: Journal of Interdisciplinary Celtic Studies},
  volume={2},
@@ -339,7 +342,7 @@
 }
 
 @inproceedings{wilson2008revitalization,
- title={The revitalization of the Manx language and culture in an era of global change},
+ title={The revitalization of the {Manx} language and culture in an era of global change},
  author={Wilson, Gary N},
  booktitle={Proceedings of the Third International Small Island Cultures Conference},
  pages={74--81},
@@ -357,7 +360,7 @@
 }
 
 @article{lee2016assessing,
-  title={Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)},
+  title={Assessing levels of endangerment in the {Catalogue of Endangered Languages (ELCat)} using the {Language Endangerment Index (LEI)}},
   author={Lee, Nala Huiying and Van Way, John},
   journal={Language in Society},
   volume={45},
@@ -368,7 +371,7 @@
 }
 
 @book{quilter2002narrative,
-  title={Narrative threads: Accounting and recounting in Andean khipu},
+  title={Narrative threads: Accounting and recounting in {Andean} khipu},
   author={Quilter, Jeffrey and Urton, Gary},
   year={2002},
   publisher={University of Texas Press}
@@ -376,7 +379,7 @@
 
 
 @inproceedings{williams2014computational,
-  title={A computational pipeline for crowdsourced transcriptions of Ancient Greek papyrus fragments},
+  title={A computational pipeline for crowdsourced transcriptions of {Ancient Greek} papyrus fragments},
   author={Williams, Alex C and Wallin, John F and Yu, Haoyu and Perale, Marco and Carroll, Hyrum D and Lamblin, Anne-Francoise and Fortson, Lucy and Obbink, Dirk and Lintott, Chris J and Brusuelas, James H},
   booktitle={Big Data (Big Data), 2014 IEEE International Conference on},
   pages={100--105},
@@ -394,7 +397,7 @@
 }
 
 @inproceedings{leonard2004acquisition,
- title={The acquisition of Miami: Findings from a field study},
+ title={The acquisition of {Miami}: Findings from a field study},
  author={Leonard, Wesley},
  booktitle={36th Annual Algonquian Conference, Madison, WI},
  year={2004}
@@ -437,7 +440,7 @@
  booktitle={Conference Handbook on Endangered languages of the Pacific Rim},
  pages={75-78},
  location={Osaka},
- published={Endangered Languages of the Pacific Rim Project},
+ publisher={Endangered Languages of the Pacific Rim Project},
  journal={2nd International Conference on Endangered Languages of the Pacific Rim, Kyoto, Japan.},
  date={November 30 – December 2, 2001}
 }
@@ -453,7 +456,7 @@
 }
 
 @article{anderson2006language,
- title={Language hotspots: linking language extinction, biodiversity, \& human knowledge base},
+ title={Language hotspots: Linking language extinction, biodiversity, \& human knowledge base},
  author={Anderson, Gregory DS and Harrison, K David},
  journal={Living Tongues Institute for Endangered Languages Occasional Papers},
  year={2006}
@@ -485,7 +488,7 @@
 }
 
 @article{simons2013world,
- title={The world’s languages in crisis},
+ title={The world's languages in crisis},
  author={Simons, Gary F and Lewis, MPaul},
  journal={Responses to language endangerment: In honor of Mickey Noonan. New directions in language documentation and language revitalization},
  volume={3},
@@ -506,7 +509,7 @@
 }
 
 @inproceedings{chiarcos2012open,
- title={The Open Linguistics Working Group.},
+ title={The {Open Linguistics Working Group}},
  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
  booktitle={LREC},
  pages={3603--3610},
@@ -570,8 +573,12 @@
 }
 
 @article{newman1998we,
-  title={We has seen the enemy and it is us: The endangered languages issue as a hopeless cause},
+  title={We has seen the enemy and it is us: the endangered languages issue as a hopeless cause},
   author={Newman, Paul},
+  journal={Studies in the Linguistic Sciences},
+  volume={28},
+  number={2},
+  pages={11-20},
   year={1998}
 }
 
@@ -579,20 +586,19 @@
   address   = {Leipzig},
   editor    = {Matthew S. Dryer and Martin Haspelmath},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
-  title     = {WALS Online},
+  title     = {{WALS} Online},
   url       = {http://wals.info/},
   year      = {2013}
 }
 
 @inbook{wals-141,
- address  = {Leipzig},
  author  = {Bernard Comrie},
- booktitle = {The World Atlas of Language Structures Online},
- editor  = {Matthew S. Dryer and Martin Haspelmath},
- publisher = {Max Planck Institute for Evolutionary Anthropology},
  title   = {Writing Systems},
+ publisher = {Max Planck Institute for Evolutionary Anthropology},
+ chapter = 141,
  url    = {http://wals.info/chapter/141},
- year   = {2013}
+ year   = {2013},
+ book   = "wals"
 }
 
 @article{kornai2013digital,
@@ -617,7 +623,7 @@
 
 @inproceedings{storey2014,
  author = {Storey, Margaret-Anne and Singer, Leif and Cleary, Brendan and Figueira Filho, Fernando and Zagalsky, Alexey},
- title = {The (R) Evolution of Social Media in Software Engineering},
+ title = {The ({R}) Evolution of Social Media in Software Engineering},
  booktitle = {Proceedings of the on Future of Software Engineering},
  series = {FOSE 2014},
  year = {2014},
@@ -664,7 +670,7 @@
 }
 
 @book{naskapi-new-testament,
- title={Naskapi New Testament},
+ title={{Naskapi New Testament}},
  author="{Naskapi Development Corporation}",
  year={2007},
  isbn={978-0-88843-557-8},
